fix(order-card): update font size for improved readability

--- a/pages/home/components/order-card/order-card.scss
+++ b/pages/home/components/order-card/order-card.scss
@@ -30,7 +30,7 @@
   justify-content: center;
   width: 50rpx;
   height: 50rpx;
-  font-size: $font-size-xs;
+  font-size: $font-size-md;
   font-weight: $font-weight-semibold;
 }
 
